kustomize-owncloud/owncloud-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: owncloud
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: owncloud
  template:
    metadata:
      labels:
        app: owncloud
    spec:
      containers:
      - image: owncloud/server:10.15.0
        name: owncloud
        ports:
        - containerPort: 8080
        env:  # Ajout de la section pour les variables d'environnement
        - name: OWNCLOUD_TRUSTED_DOMAINS
          value: "owncloud.local"
        volumeMounts:
        - name: owncloud-storage
          mountPath: /var/www/html
      volumes:
      - name: owncloud-storage
        persistentVolumeClaim:
          claimName: kustomize-owncloud-pvc
